--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <div>
         <button id="alert">Mon alert</button>
-        <button id="somme"></button>
+        <button id="somme">Mon button</button>
     </div>
+
+    <script src="js/app.js"></script>
 </body>
 </html>
