--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div>
         <button id="alert">Mon alert</button>
-        <button id="somme">Mon button</button>
+        <button id="somme">Ma somme</button>
     </div>
 
     <script src="js/app.js"></script>
